--- a/index.html
+++ b/index.html
@@ -4,26 +4,44 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Pet Store</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="">
+
+	<title>Pet Store</title>
+	<link rel="shortcut icon" href="img/outros/pata-.png">
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
+
+	<!-- Font Roboto -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
+
+	<!-- JavaScript -->
 	<script src="js/script.js" type="text/javascript"></script>
 </head>
-<header>
-	<input type="text" placeholder="Pesquisar">
-	<img src="/img/menu/logo.png" alt="logo Pet Store">
-	<div>
-		
-	</div>
-	<nav>
-
-	</nav>
-</header>
 
 <body>
-
+	<header class="menu">
+		<input class="menu-pesquisa" type="text" placeholder="Pesquisar">
+		<img class="logo" src="img/menu/logo.png" alt="logo Pet Store">
+		<div class="menu-perfil">
+			<a href="#"><img src="img/menu/login.png" alt="perfil"></a>
+			<a href="#"><img src="img/menu/carrinho.png" alt=""></a>
+		</div>
+		<nav>
+			<ul>
+				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Categoria</a></li>
+				<li><a href="#">Categoria lorem ipsum</a></li>
+				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Categoria</a></li>
+				<li><a href="#">Categoria lorem ipsum</a></li>
+				<li><a href="#">Lorem ipsum</a></li>
+			</ul>
+		</nav>
+	</header>
 </body>
 
 </html>
