--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 	<!-- Font Roboto -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
-
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;1,100;1,300;1,500&display=swap"
+		rel="stylesheet"> rel="stylesheet">
 	<!-- JavaScript -->
 	<script src="js/script.js" type="text/javascript"></script>
 </head>
@@ -30,7 +31,7 @@
 			<a href="#"><img src="img/menu/login.png" alt="perfil"></a>
 			<a href="#"><img src="img/menu/carrinho.png" alt=""></a>
 		</div>
-		<nav>
+		<nav class="menu-nav">
 			<ul>
 				<li><a href="#">Lorem ipsum</a></li>
 				<li><a href="#">Categoria</a></li>
