--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
 	<!-- Font Roboto -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link
-		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;1,100;1,300;1,500&display=swap"
-		rel="stylesheet"> rel="stylesheet">
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,300;1,400;1,500;1,900&display=swap"
+		rel="stylesheet">
 	<!-- JavaScript -->
 	<script src="js/script.js" type="text/javascript"></script>
+
+
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
 	<header class="menu">
-		<input class="menu-pesquisa" type="text" placeholder="Pesquisar">
 		<img class="logo" src="img/menu/logo.png" alt="logo Pet Store">
 		<div class="menu-perfil">
 			<a href="#"><img src="img/menu/login.png" alt="perfil"></a>
 			<a href="#"><img src="img/menu/carrinho.png" alt=""></a>
 		</div>
 		<nav class="menu-nav">
-			<ul>
+			<ul id="links">
 				<li><a href="#">Lorem ipsum</a></li>
 				<li><a href="#">Categoria</a></li>
 				<li><a href="#">Categoria lorem ipsum</a></li>
@@ -42,6 +44,12 @@
 				<li><a href="#">Lorem ipsum</a></li>
 			</ul>
 		</nav>
+		<input class="menu-pesquisa" type="text" placeholder="Pesquisar">
+		<a href="javascript:void(0);" class="icon" onclick="navOpen()">
+			<span class="material-icons-outlined">
+				<img src="img/hamburger.svg" alt="">
+			</span>
+		</a>
 	</header>
 </body>
 
