versao desktop ok

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 		</div>
 		<nav class="menu-nav">
 			<ul id="links">
-				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Categoria lorem</a></li>
 				<li><a href="#">Categoria</a></li>
 				<li><a href="#">Categoria lorem ipsum</a></li>
-				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Categoria lorem</a></li>
 				<li><a href="#">Categoria</a></li>
 				<li><a href="#">Categoria lorem ipsum</a></li>
-				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Categoria ipsum</a></li>
 			</ul>
 		</nav>
-		<input class="menu-pesquisa" type="text" placeholder="Pesquisar">
+		<input class="menu-pesquisa" type="text" placeholder="Pesquisar...">
 		<a href="javascript:void(0);" class="icon" onclick="navOpen()">
 			<span class="material-icons-outlined">
 				<img src="img/hamburger.svg" alt="">
