--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/index.css">
 
 	<!-- Font Roboto -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -51,6 +52,11 @@
 			</span>
 		</a>
 	</header>
+	<main>
+		<section class="banner">
+			<img src="img/outros/banner.png" alt="">
+		</section>
+	</main>
 </body>
 
 </html>
