--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 		<section class="banner">
 			<img src="img/outros/banner.png" alt="">
 		</section>
+		<section class="categorias">
+
+		</section>
 	</main>
 </body>
 
