ajustando os detalhes dos produtos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 	<!-- Font Roboto -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link
-		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,300;1,400;1,500;1,900&display=swap"
+		href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
 		rel="stylesheet">
+
 	<!-- JavaScript -->
 	<script src="js/script.js" type="text/javascript"></script>
 
@@ -60,7 +61,7 @@
 		<section class="banner">
 			<img src="img/outros/banner.png" alt="banner">
 		</section>
-		<section class="categorias">
+		<section class="categoria">
 			<a href="">
 				<img src="img/categoria/racoes.png" alt="categoria racoes">
 			</a>
@@ -69,6 +70,84 @@
 			</a>
 			<a href="">
 				<img src="img/categoria/acessorio.png" alt="categoria acessorios">
+			</a>
+		</section>
+		<section class="protudo">
+			<h2>Novidades</h2>
+			<figure>
+				<a class="qwe" href="#">
+					<img class="produto-imagem" src="img/produtos/1.png" alt="">
+					<div class="ttt">
+						<div class="middle">
+							<div class="text">Compra rápida</div>
+						</div>
+					</div>
+					<figcaption class="produto-descricao">
+						<span class="produto-titulo">
+							Lorem ipsum dolor summit
+						</span>
+						<span class="produto-preco">
+							R$ 99,99
+						</span>
+					</figcaption>
+			</figure>
+			</a>
+			<figure>
+				<a href="#">
+					<img class="produto-imagem" src="img/produtos/2.png" alt="">
+					<span class="produto-desconto-porcento">50% OFF</span>
+					<figcaption class="produto-descricao">
+						<span class="produto-titulo">
+							Lorem ipsum dolor summit
+						</span>
+						<span class="produto-preco">
+							R$ 99,99
+						</span>
+						<span class="produto-parcela">
+							99x de R$ 99,99
+						</span>
+					</figcaption>
+			</figure>
+			</a>
+
+			<figure>
+				<a href="#">
+					<img class="produto-imagem" src="img/produtos/3.png" alt="">
+					<figcaption class="produto-descricao">
+						<span class="produto-titulo">
+							Lorem ipsum dolor summit
+						</span>
+						<div class="protudo-desconto">
+							<span class="produto-preco-antigo">
+								R$ 99,99
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+						</div>
+					</figcaption>
+			</figure>
+			</a>
+			<figure>
+				<a href="#">
+					<img class="produto-imagem" src="img/produtos/4.png" alt="">
+					<figcaption class="produto-descricao">
+						<span class="produto-titulo">
+							Lorem ipsum dolor summit
+						</span>
+						<div class="protudo-desconto">
+							<span class="produto-preco-antigo">
+								R$ 99,99
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+						</div>
+						<span class="produto-parcela">
+							99x de R$ 99,99
+						</span>
+					</figcaption>
+			</figure>
 			</a>
 		</section>
 	</main>
