tem que arrumar umas coisas ainda

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 				<img src="img/categoria/acessorio.png" alt="categoria acessorios">
 			</a>
 		</section>
-		<section class="protudo">
+		<section class="produto">
 			<h2>Novidades</h2>
-			<figure>
-				<a class="qwe" href="#">
+			<figure class="produto-figure">
+				<a href="#">
 					<img class="produto-imagem" src="img/produtos/1.png" alt="">
-					<div class="ttt">
-						<div class="middle">
+					<div class="produto-compra-rapida">
+						<div class="produto-compra-rapida-text">
 							<div class="text">Compra rápida</div>
 						</div>
 					</div>
@@ -92,10 +92,15 @@
 					</figcaption>
 			</figure>
 			</a>
-			<figure>
+			<figure class="produto-figure">
 				<a href="#">
 					<img class="produto-imagem" src="img/produtos/2.png" alt="">
-					<span class="produto-desconto-porcento">50% OFF</span>
+					<div class="produto-compra-rapida">
+						<div class="produto-compra-rapida-text">
+							<div class="text">Compra rápida</div>
+						</div>
+					</div>
+					<span class="produto-tag">50% OFF</span>
 					<figcaption class="produto-descricao">
 						<span class="produto-titulo">
 							Lorem ipsum dolor summit
@@ -110,14 +115,19 @@
 			</figure>
 			</a>
 
-			<figure>
+			<figure class="produto-figure">
 				<a href="#">
 					<img class="produto-imagem" src="img/produtos/3.png" alt="">
+					<div class="produto-compra-rapida">
+						<div class="produto-compra-rapida-text">
+							<div class="text">Compra rápida</div>
+						</div>
+					</div>
 					<figcaption class="produto-descricao">
 						<span class="produto-titulo">
 							Lorem ipsum dolor summit
 						</span>
-						<div class="protudo-desconto">
+						<div class="produto-desconto">
 							<span class="produto-preco-antigo">
 								R$ 99,99
 							</span>
@@ -128,14 +138,20 @@
 					</figcaption>
 			</figure>
 			</a>
-			<figure>
+			<figure class="produto-figure">
 				<a href="#">
 					<img class="produto-imagem" src="img/produtos/4.png" alt="">
+					<div class="produto-compra-rapida">
+						<div class="produto-compra-rapida-text">
+							<div class="text">Compra rápida</div>
+						</div>
+					</div>
+					<span class="produto-tag">Novo</span>
 					<figcaption class="produto-descricao">
 						<span class="produto-titulo">
 							Lorem ipsum dolor summit
 						</span>
-						<div class="protudo-desconto">
+						<div class="produto-desconto">
 							<span class="produto-preco-antigo">
 								R$ 99,99
 							</span>
