falta apenas um detalhe dos lados

--- a/index.html
+++ b/index.html
@@ -62,109 +62,113 @@
 			<img src="img/outros/banner.png" alt="banner">
 		</section>
 		<section class="categoria">
-			<a href="">
-				<img src="img/categoria/racoes.png" alt="categoria racoes">
-			</a>
-			<a href="">
-				<img src="img/categoria/brinquedo.png" alt="categoria brinquedos">
-			</a>
-			<a href="">
-				<img src="img/categoria/acessorio.png" alt="categoria acessorios">
-			</a>
+			<div class="categoria-produtos">
+				<a href="">
+					<img src="img/categoria/racoes.png" alt="categoria racoes">
+				</a>
+				<a href="">
+					<img src="img/categoria/brinquedo.png" alt="categoria brinquedos">
+				</a>
+				<a href="">
+					<img src="img/categoria/acessorio.png" alt="categoria acessorios">
+				</a>
+			</div>
 		</section>
 		<section class="produto">
-			<h2>Novidades</h2>
-			<figure class="produto-figure">
-				<a href="#">
-					<img class="produto-imagem" src="img/produtos/1.png" alt="">
-					<div class="produto-compra-rapida">
-						<div class="produto-compra-rapida-text">
-							<div class="text">Compra rápida</div>
+			<div class="produtos-novidade">
+				<h2>Novidades</h2>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/1.png" alt="">
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
 						</div>
-					</div>
-					<figcaption class="produto-descricao">
-						<span class="produto-titulo">
-							Lorem ipsum dolor summit
-						</span>
-						<span class="produto-preco">
-							R$ 99,99
-						</span>
-					</figcaption>
-			</figure>
-			</a>
-			<figure class="produto-figure">
-				<a href="#">
-					<img class="produto-imagem" src="img/produtos/2.png" alt="">
-					<div class="produto-compra-rapida">
-						<div class="produto-compra-rapida-text">
-							<div class="text">Compra rápida</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/2.png" alt="">
+						<span class="produto-tag">50% OFF</span>
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
 						</div>
-					</div>
-					<span class="produto-tag">50% OFF</span>
-					<figcaption class="produto-descricao">
-						<span class="produto-titulo">
-							Lorem ipsum dolor summit
-						</span>
-						<span class="produto-preco">
-							R$ 99,99
-						</span>
-						<span class="produto-parcela">
-							99x de R$ 99,99
-						</span>
-					</figcaption>
-			</figure>
-			</a>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+							<span class="produto-parcela">
+								99x de R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
 
-			<figure class="produto-figure">
-				<a href="#">
-					<img class="produto-imagem" src="img/produtos/3.png" alt="">
-					<div class="produto-compra-rapida">
-						<div class="produto-compra-rapida-text">
-							<div class="text">Compra rápida</div>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/3.png" alt="">
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
 						</div>
-					</div>
-					<figcaption class="produto-descricao">
-						<span class="produto-titulo">
-							Lorem ipsum dolor summit
-						</span>
-						<div class="produto-desconto">
-							<span class="produto-preco-antigo">
-								R$ 99,99
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
 							</span>
-							<span class="produto-preco">
-								R$ 99,99
-							</span>
+							<div class="produto-desconto">
+								<span class="produto-preco-antigo">
+									R$ 99,99
+								</span>
+								<span class="produto-preco">
+									R$ 99,99
+								</span>
+							</div>
+						</figcaption>
+					</a>
+				</figure>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/4.png" alt="">
+						<span class="produto-tag">Novo</span>
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
 						</div>
-					</figcaption>
-			</figure>
-			</a>
-			<figure class="produto-figure">
-				<a href="#">
-					<img class="produto-imagem" src="img/produtos/4.png" alt="">
-					<div class="produto-compra-rapida">
-						<div class="produto-compra-rapida-text">
-							<div class="text">Compra rápida</div>
-						</div>
-					</div>
-					<span class="produto-tag">Novo</span>
-					<figcaption class="produto-descricao">
-						<span class="produto-titulo">
-							Lorem ipsum dolor summit
-						</span>
-						<div class="produto-desconto">
-							<span class="produto-preco-antigo">
-								R$ 99,99
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
 							</span>
-							<span class="produto-preco">
-								R$ 99,99
+							<div class="produto-desconto">
+								<span class="produto-preco-antigo">
+									R$ 99,99
+								</span>
+								<span class="produto-preco">
+									R$ 99,99
+								</span>
+							</div>
+							<span class="produto-parcela">
+								99x de R$ 99,99
 							</span>
-						</div>
-						<span class="produto-parcela">
-							99x de R$ 99,99
-						</span>
-					</figcaption>
-			</figure>
-			</a>
+						</figcaption>
+					</a>
+				</figure>
+			</div>
 		</section>
 	</main>
 
