arrumando as tags

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 		<section class="banner">
 			<img src="img/outros/banner.png" alt="banner">
 		</section>
-		<section class="categoria">
-			<div class="categoria-produtos">
+		<section class="categoria color-produto">
+			<div class="categoria-produtos color-produto">
 				<a href="">
 					<img src="img/categoria/racoes.png" alt="categoria racoes">
 				</a>
@@ -98,7 +98,7 @@
 				<figure class="produto-figure">
 					<a href="#">
 						<img class="produto-imagem" src="img/produtos/2.png" alt="">
-						<span class="produto-tag">50% OFF</span>
+						<span class="produto-tag porcento"></span>
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -144,7 +144,202 @@
 				<figure class="produto-figure">
 					<a href="#">
 						<img class="produto-imagem" src="img/produtos/4.png" alt="">
-						<span class="produto-tag">Novo</span>
+						<span class="produto-tag novo"></span>
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<div class="produto-desconto">
+								<span class="produto-preco-antigo">
+									R$ 99,99
+								</span>
+								<span class="produto-preco">
+									R$ 99,99
+								</span>
+							</div>
+							<span class="produto-parcela">
+								99x de R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
+			</div>
+		</section>
+		<section class="categoria">
+			<div class="categoria-animal">
+				<a href="">
+					<img src="img/categoria/cat.png" alt="categoria racoes">
+				</a>
+				<a href="">
+					<img src="img/categoria/dog.png" alt="categoria brinquedos">
+				</a>
+			</div>
+		</section>
+		<section class="produto">
+			<div class="produtos-novidade">
+				<h2>Novidades</h2>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/1.png" alt="">
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/2.png" alt="">
+						<span class="produto-tag porcento"></span>
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+							<span class="produto-parcela">
+								99x de R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
+
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/3.png" alt="">
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<div class="produto-desconto">
+								<span class="produto-preco-antigo">
+									R$ 99,99
+								</span>
+								<span class="produto-preco">
+									R$ 99,99
+								</span>
+							</div>
+						</figcaption>
+					</a>
+				</figure>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/4.png" alt="">
+						<span class="produto-tag novo"></span>
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<div class="produto-desconto">
+								<span class="produto-preco-antigo">
+									R$ 99,99
+								</span>
+								<span class="produto-preco">
+									R$ 99,99
+								</span>
+							</div>
+							<span class="produto-parcela">
+								99x de R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/1.png" alt="">
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/2.png" alt="">
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<span class="produto-preco">
+								R$ 99,99
+							</span>
+							<span class="produto-parcela">
+								99x de R$ 99,99
+							</span>
+						</figcaption>
+					</a>
+				</figure>
+
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/3.png" alt="">
+						<div class="produto-compra-rapida">
+							<div>
+								<div class="produto-compra-rapida-text">Compra rápida</div>
+							</div>
+						</div>
+						<figcaption class="produto-descricao">
+							<span class="produto-titulo">
+								Lorem ipsum dolor summit
+							</span>
+							<div class="produto-desconto">
+								<span class="produto-preco-antigo">
+									R$ 99,99
+								</span>
+								<span class="produto-preco">
+									R$ 99,99
+								</span>
+							</div>
+						</figcaption>
+					</a>
+				</figure>
+				<figure class="produto-figure">
+					<a href="#">
+						<img class="produto-imagem" src="img/produtos/4.png" alt="">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
