separando os media query

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/mediaQuery.css">
 
 	<!-- Font Roboto -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -366,7 +367,11 @@
 			</div>
 		</section>
 	</main>
+	<section class="newsletter">
+		<div>
 
+		</div>
+	</section>
 </body>
 
 </html>
