deixando o css com mais sentido

--- a/index.html
+++ b/index.html
@@ -369,7 +369,9 @@
 	</main>
 	<section class="newsletter">
 		<div>
-
+			<p><strong>Entrega gratuita</strong> a partir de R$ 99</p>
+			<p><strong>Parcelamento</strong> sem juros</p>
+			<p><strong>Cadastre-se</strong> e ganhe desconto</p>
 		</div>
 	</section>
 </body>
