--- a/index.html
+++ b/index.html
@@ -368,10 +368,20 @@
 		</section>
 	</main>
 	<section class="newsletter">
-		<div>
+		<div class="vantagem">
 			<p><strong>Entrega gratuita</strong> a partir de R$ 99</p>
 			<p><strong>Parcelamento</strong> sem juros</p>
 			<p><strong>Cadastre-se</strong> e ganhe desconto</p>
+		</div>
+		<div class="newsletter-informacao">
+			<h3>Assine nossa newsletter</h3>
+			<p>Cadastre-se para receber nossas novidades e descontos exclusivos!</p>
+		
+			<form>
+				<input type="text" id="nome" placeholder="Nome">
+				<input type="email" id="email" placeholder="E-mail">
+				<input type="submit" value="Enviar">
+			</form>
 		</div>
 	</section>
 </body>
