--- a/index.html
+++ b/index.html
@@ -224,7 +224,6 @@
 						</figcaption>
 					</a>
 				</figure>
-
 				<figure class="produto-figure">
 					<a href="#">
 						<img class="produto-imagem" src="img/produtos/3.png" alt="">
@@ -376,7 +375,7 @@
 		<div class="newsletter-informacao">
 			<h3>Assine nossa newsletter</h3>
 			<p>Cadastre-se para receber nossas novidades e descontos exclusivos!</p>
-		
+
 			<form>
 				<input type="text" id="nome" placeholder="Nome">
 				<input type="email" id="email" placeholder="E-mail">
@@ -384,6 +383,48 @@
 			</form>
 		</div>
 	</section>
+	<footer>
+		<img class=footer-logo src="img/menu/logo.png" alt="">
+		<div class="redes-sociais">
+			<a href="">
+				<img src="img/footer/face.png" alt="">
+			</a>
+			<a href="">
+				<img src="img/footer/insta.png" alt="">
+			</a>
+			<a href="">
+				<img src="img/footer/tt.png" alt="">
+			</a>
+			<div class="endereco">
+				2019 * CNPJ 00 000.000/0000-00
+				<address class="endereco flex-2-col" style="min-width: 250px;">
+					R. Conselheiro Ribas, 386<br>
+				</address>
+			</div>
+		</div>
+		<div class="test">
+			<div class="outras-pag">
+				<h2>Pet Store</h2>
+				<ul>
+					<li>Quem Somos</li>
+					<li>Como Comprar</li>
+					<li>Trocas e Devoluções</li>
+					<li>Frete e Entrega</li>
+				</ul>
+			</div>
+			<div class="contato">
+				<h2>Contato</h2>
+				<ul>
+					<li>(99) 9999-9999</li>
+					<li>(99) 9999-9999</li>
+					<li>petstore@petstore.com.br</li>
+				</ul>
+			</div>
+			<div class="pagamento">
+				<img src="img/footer/pagamentos.png" alt="">
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
