--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<h2>Novidades</h2>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/1.png" alt="">
+						<img class="produto-imagem" src="img/produtos/1.png" alt="rede">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -98,7 +98,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/2.png" alt="">
+						<img class="produto-imagem" src="img/produtos/2.png" alt="caminha">
 						<span class="produto-tag porcento"></span>
 						<div class="produto-compra-rapida">
 							<div>
@@ -121,7 +121,7 @@
 
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/3.png" alt="">
+						<img class="produto-imagem" src="img/produtos/3.png" alt="girafa">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -144,7 +144,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/4.png" alt="">
+						<img class="produto-imagem" src="img/produtos/4.png" alt="banheira">
 						<span class="produto-tag novo"></span>
 						<div class="produto-compra-rapida">
 							<div>
@@ -186,7 +186,7 @@
 				<h2>Novidades</h2>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/1.png" alt="">
+						<img class="produto-imagem" src="img/produtos/1.png" alt="rede">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -204,7 +204,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/2.png" alt="">
+						<img class="produto-imagem" src="img/produtos/2.png" alt="caminha">
 						<span class="produto-tag porcento"></span>
 						<div class="produto-compra-rapida">
 							<div>
@@ -226,7 +226,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/3.png" alt="">
+						<img class="produto-imagem" src="img/produtos/3.png" alt="girafa">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -249,7 +249,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/4.png" alt="">
+						<img class="produto-imagem" src="img/produtos/4.png" alt="banheira">
 						<span class="produto-tag novo"></span>
 						<div class="produto-compra-rapida">
 							<div>
@@ -276,7 +276,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/1.png" alt="">
+						<img class="produto-imagem" src="img/produtos/1.png" alt="rede">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -294,7 +294,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/2.png" alt="">
+						<img class="produto-imagem" src="img/produtos/2.png" alt="caminha">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -316,7 +316,7 @@
 
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/3.png" alt="">
+						<img class="produto-imagem" src="img/produtos/3.png" alt="girafa">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -339,7 +339,7 @@
 				</figure>
 				<figure class="produto-figure">
 					<a href="#">
-						<img class="produto-imagem" src="img/produtos/4.png" alt="">
+						<img class="produto-imagem" src="img/produtos/4.png" alt="banheira">
 						<div class="produto-compra-rapida">
 							<div>
 								<div class="produto-compra-rapida-text">Compra rápida</div>
@@ -384,25 +384,27 @@
 		</div>
 	</section>
 	<footer>
-		<img class=footer-logo src="img/menu/logo.png" alt="">
-		<div class="redes-sociais">
-			<a href="">
-				<img src="img/footer/face.png" alt="">
-			</a>
-			<a href="">
-				<img src="img/footer/insta.png" alt="">
-			</a>
-			<a href="">
-				<img src="img/footer/tt.png" alt="">
-			</a>
+		<div class=footer-logo>
+			<img src="img/menu/logo.png" alt="logo petstore">
+			<div class="redes-sociais">
+				<a href="">
+					<img src="img/footer/face.png" alt="icon facebook">
+				</a>
+				<a href="">
+					<img src="img/footer/insta.png" alt="icon instagram">
+				</a>
+				<a href="">
+					<img src="img/footer/tt.png" alt="icon twitter">
+				</a>
+			</div>
 			<div class="endereco">
-				2019 * CNPJ 00 000.000/0000-00
+				2019 . CNPJ 00 000.000/0000-00
 				<address class="endereco flex-2-col" style="min-width: 250px;">
 					R. Conselheiro Ribas, 386<br>
 				</address>
 			</div>
 		</div>
-		<div class="test">
+		<div class="outros-links">
 			<div class="outras-pag">
 				<h2>Pet Store</h2>
 				<ul>
@@ -421,10 +423,15 @@
 				</ul>
 			</div>
 			<div class="pagamento">
-				<img src="img/footer/pagamentos.png" alt="">
+				<h2>Pagamento</h2>
+				<img src="img/footer/pagamentos.png" alt="formas de pagamento">
 			</div>
 		</div>
 	</footer>
+	<div class="desenvolvido">
+		<p>Tecnologia e desenvolvimento</p>
+		<img src="img/footer/logo-serie.png" alt="logo da seri.e">
+	</div>
 </body>
 
 </html>
