--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<!-- JavaScript -->
 	<script src="js/script.js" type="text/javascript"></script>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -33,7 +33,7 @@
 	<header class="menu">
 		<a href="javascript:void(0);" class="icon" onclick="navOpen()">
 			<span class="material-icons-outlined">
-				<img src="img/hamburger.svg" alt="menu">
+				<img src="img/outros/hamburger.svg" alt="menu">
 			</span>
 		</a>
 		<h1>
@@ -58,6 +58,15 @@
 			</ul>
 		</nav>
 	</header>
+
+	<div class="flutuante">
+		<a id="subirTopo">
+			<img src="img/outros/seta.png" alt="">
+		</a>
+		<a target="_blank" href="https://api.whatsapp.com/send?phone=5511999999999">
+			<img src="img/outros/whats.png" alt="">
+		</a>
+	</div>
 	<main>
 		<section class="banner">
 			<img src="img/outros/banner.png" alt="banner">
@@ -432,6 +441,9 @@
 		<p>Tecnologia e desenvolvimento</p>
 		<img src="img/footer/logo-serie.png" alt="logo da seri.e">
 	</div>
+
+	<!-- JavaScript -->
+	<script src="js/scroll.js" type="text/javascript"></script>
 </body>
 
 </html>
